external-crates/move/crates/move-compiler/tests/move_check/expansion/friend_decl_nonexistent_alias.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03002]: unbound module
  ┌─ tests/move_check/expansion/friend_decl_nonexistent_alias.move:3:12
  │
3 │     friend Nonexistent;
  │            ^^^^^^^^^^^ Unbound module alias 'Nonexistent'
